src/orbital-designer/src/app/components/endpoint-view/overview/overview.component.scss
.example-card {
    width: 80%;
    height: 25% !important;
    position: absolute;
    right: 2%;
    top: 9%;
    padding: 0px;
    border-radius: 0px;
    -webkit-box-shadow: 10px 0px 10px -5px rgba(153,148,153,1);
    -moz-box-shadow: 10px 0px 10px -5px rgba(153,148,153,1);
    box-shadow: 10px 0px 10px -5px rgba(153,148,153,1);
    display: flex;
    flex-direction: column;
  }

  .header-title {
    background-color: grayscale($color: #616161);
    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.24), 0px 0px 4px rgba(0, 0, 0, 0.12);
    height: 48px;
    width: 100%;
    display: inline-flex;
    align-items: center;
    justify-content: left !important;
    flex-direction: row;
  }

  .title-container{
    display: inline-flex;
    padding-left: 2% !important;
  }

  .card-title
  {
    color: white; 
    margin-top: 15% !important;   
    font-family: Roboto;
    font-size: 1.4em;
    font-style: normal;
    font-weight: 500;
    letter-spacing: 0.0357143em;
  }

  .mock-description{
    width: 95%;
    height: 77% !important;
    display: inline-flex;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    flex-direction: column;
    text-justify: inter-word;
  }

  .mock-description h3{
    margin-top: 10px !important;
    font-family: Roboto;
    font-style: normal;
    font-weight: 500;
    font-size: 1.4em;
    color: rgba(0, 0, 0, 0.87);
  }

  .mock-description p{
    font-family: Roboto;
    font-style: normal;
    font-weight: normal;
    letter-spacing: 0.08em;
    font-size: 1.2em;
    line-height: 1.8em;
    overflow-y: auto;
    color: rgba(0, 0, 0, 0.541327);
  }

